multi-head classification

--- a/resnet.ipynb
+++ b/resnet.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "905ceeec",
    "metadata": {},
    "outputs": [
@@ -30,41 +30,18 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
+    "from utils import assign_splits, get_label_mapping\n",
     "\n",
-    "df = pd.read_csv(\"faces_yolo_metadata.csv\")\n",
-    "\n",
-    "ID_COL = \"id\"\n",
-    "LABEL_COL = \"mbti\" if \"mbti\" in df.columns else \"four_letter\"\n",
-    "\n",
-    "train_r, val_r = 0.8, 0.1\n",
-    "rng = np.random.default_rng(42)\n",
-    "\n",
-    "splits = {}\n",
-    "\n",
-    "for mbti, group in df.groupby(LABEL_COL):\n",
-    "    ids = group[ID_COL].unique()\n",
-    "    rng.shuffle(ids)\n",
-    "\n",
-    "    n = len(ids)\n",
-    "    t = max(1, int(train_r * n))\n",
-    "    v = max(1, int(val_r * n)) if n >= 3 else 0\n",
-    "    splits_mbti = (\n",
-    "        {id_: \"train\" for id_ in ids[:t]}\n",
-    "        | {id_: \"val\" for id_ in ids[t : t + v]}\n",
-    "        | {id_: \"test\" for id_ in ids[t + v :]}\n",
-    "    )\n",
-    "    splits.update(splits_mbti)\n",
-    "\n",
-    "df[\"split\"] = df[ID_COL].map(splits)\n",
-    "df.to_csv(\"faces_yolo_metadata.csv\", index=False)\n",
-    "print(df[\"split\"].value_counts())"
+    "assign_splits(\n",
+    "    file_path=\"faces_yolo_metadata.csv\",\n",
+    "    id_column=\"id\",\n",
+    "    label_column=\"mbti\",\n",
+    ")    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "638ac007",
    "metadata": {},
    "outputs": [
@@ -77,11 +54,10 @@
     }
    ],
    "source": [
-    "mbti_to_idx = {\n",
-    "    mbti: idx for idx, mbti in enumerate(sorted(df[LABEL_COL].unique()))\n",
-    "}\n",
-    "\n",
-    "print(\"MBTI to index mapping:\", mbti_to_idx)"
+    "mbti_to_idx = get_label_mapping(\n",
+    "    file_path=\"faces_yolo_metadata.csv\",\n",
+    "    label_column=\"mbti\",\n",
+    ")"
    ]
   },
   {
@@ -111,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "7e107f14",
    "metadata": {},
    "outputs": [],
