added pre-trained setup, pretrained script, multiple weights, and new 'corrected' dataset class

--- a/resnet_binary.ipynb
+++ b/resnet_binary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "5af30017",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c124a2d4",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "75a8c2d6",
    "metadata": {},
    "outputs": [],
@@ -95,10 +95,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "49a631df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([32, 3, 224, 224])\n",
+      "torch.Size([32])\n"
+     ]
+    }
+   ],
    "source": [
     "from torch.utils.data import DataLoader\n",
     "\n",
@@ -127,7 +136,12 @@
     ")\n",
     "\n",
     "train_loader = DataLoader(train_ds, batch_size=32, shuffle=True, num_workers=4)\n",
-    "val_loader = DataLoader(val_ds, batch_size=64, shuffle=False, num_workers=4)"
+    "val_loader = DataLoader(val_ds, batch_size=64, shuffle=False, num_workers=4)\n",
+    "\n",
+    "for images, labels in train_loader:\n",
+    "    print(images.shape)  # [Batch, 3, 224, 224]\n",
+    "    print(labels.shape)  # [Batch, num_outputs]\n",
+    "    break"
    ]
   },
   {
