--- a/resnet_multitarget_pretrained_idds.ipynb
+++ b/resnet_multitarget_pretrained_idds.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1eb7a1c7",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
     "import torch.nn as nn\n",
     "from models import MBTIMultiHeadAffectNetPretrained\n",
     "\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n"
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
   {
