--- a/resnet.ipynb
+++ b/resnet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "a032acc6",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "905ceeec",
    "metadata": {},
    "outputs": [
@@ -41,18 +41,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "638ac007",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MBTI to index mapping: {'ENFJ': 0, 'ENFP': 1, 'ENTJ': 2, 'ENTP': 3, 'ESFJ': 4, 'ESFP': 5, 'ESTJ': 6, 'ESTP': 7, 'INFJ': 8, 'INFP': 9, 'INTJ': 10, 'INTP': 11, 'ISFJ': 12, 'ISFP': 13, 'ISTJ': 14, 'ISTP': 15}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mbti_to_idx = get_label_mapping(\n",
     "    file_path=\"faces_yolo_metadata.csv\",\n",
@@ -62,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "e7000aaa",
    "metadata": {},
    "outputs": [],
@@ -87,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7e107f14",
    "metadata": {},
    "outputs": [],
@@ -119,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "e3c62fdc",
    "metadata": {},
    "outputs": [],
@@ -143,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "92a2ffe3",
    "metadata": {},
    "outputs": [
@@ -151,7 +143,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Majority baseline acc: 0.076\n"
+      "Majority baseline acc: 0.076\n",
+      "Random guessing acc: 0.072\n"
      ]
     }
    ],
@@ -172,8 +165,18 @@
     "            total += bs\n",
     "    print(f\"Majority baseline acc: {correct/total:.3f}\")\n",
     "\n",
+    "def eval_random_guessing():\n",
+    "    correct, total = 0, 0\n",
+    "    with torch.no_grad():\n",
+    "        for x, y in val_loader:\n",
+    "            bs = y.size(0)\n",
+    "            pred = torch.randint(0, num_classes, size=y.size())\n",
+    "            correct += (pred == y).sum().item()\n",
+    "            total += bs\n",
+    "    print(f\"Random guessing acc: {correct/total:.3f}\")\n",
     "\n",
-    "eval_majority_baseline()"
+    "eval_majority_baseline()\n",
+    "eval_random_guessing()"
    ]
   },
   {
